--- a/japan.html
+++ b/japan.html
@@ -31,6 +31,29 @@
 <!--<a href="japan/riders" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/riders.png" width="320" height="160" alt="Sonic Riders"></a>--><!--September 9th, 2005-->
 <!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Sonic the Hedgehog"></a>--><!--September 16th, 2005-->
 <!--<a href="japan/wpack" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/wpack.png" width="320" height="160" alt="Double Pack"></a>--><!--January 10th, 2006-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Sonic and the Secret Rings"></a>--><!--September 14th, 2006-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Sonic Channel Blog"></a>--><!--May 14th, 2007-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Sonic Rush Adventure"></a>--><!--July 13th, 2007-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Sonic Riders: Zero Gravity"></a>--><!--September 14th, 2007-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Sonic Unleashed"></a>--><!--July 18th, 2008-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Sonic and the Black Knight"></a>--><!--October 3rd, 2008-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Night of the Werehog"></a>--><!--December 11th, 2008-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Sonic Chronicles: The Dark Brotherhood"></a>--><!--June 29th, 2009-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Sonic the Hedgehog 4"></a>--><!--February 5th, 2010-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Sonic Colors"></a>--><!--May 27th, 2010-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Sonic Free Riders"></a>--><!--September 8th, 2010-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="20th Anniversary"></a>--><!--April 8th, 2011-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Sonic Generations"></a>--><!--April 22nd, 2011-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Sonic Lost World"></a>--><!--May 18th, 2013-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Sonic & Sega All-Stars Racing"></a>--><!--February 14th, 2014-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Sonic Boom"></a>--><!--June 20th, 2014-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Sonic Channel"></a>--><!--June 2015-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="25th Anniversary"></a>--><!--February 24th, 2016-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Sonic Mania"></a>--><!--April 17th, 2017-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Sonic Forces"></a>--><!--September 24th, 2017-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Team Sonic Racing"></a>--><!--February 1st, 2019-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="30th Anniversary"></a>--><!--June 4th, 2021-->
+<!--<a href="japan/sonic" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic.png" width="320" height="160" alt="Sonic Frontiers"></a>--><!--December 9th, 2021-->
 <h2 align="center">Credits</h2>
 <p align="center">Translation: KrazeeTobi
 <br>Text Revision: KrazeeTobi
