--- a/japan/sonicadv/info/cd_vocalmini.html
+++ b/japan/sonicadv/info/cd_vocalmini.html
@@ -16,7 +16,7 @@
 
 <font size="4" color="white"><b>
 
-ソニックアドベンチャーのヴォーカル・ミニアルバム発売決定！
+Sonic Adventure's Vocal Mini Album to be released!
 
 
 
@@ -44,15 +44,15 @@ SONIC Adventure Vocal mini-Album<br>
 
 
 
-発売日：１９９８年　１２月　２日<br>
+Release date: December 2, 1998<br>
 
-価格：２１００円<br>
+Price: 2,100 yen<br>
 
-品番：ＭＪＣＡ－０００３９<br>
+Product number: MJCA-00039<br>
 
-発売元：（株）マーベラス・エンターテイメント<br>
+Distributed by: Marvelous Entertainment Inc.<br>
 
-販売元：（株）ポニーキャニオン
+Distributed by: Pony Canyon Inc.
 
 <p>
 
@@ -64,19 +64,19 @@ SONIC Adventure Vocal mini-Album<br>
 
 <tr><td colspan=2 align="left">
 
-ソニックチームの最新作、ソニックアドベンチャーのテーマソングを集めた<br>
+We've decided to release a vocal mini-album of the theme songs from Sonic Adventure,<br>
 
-ヴォーカル・ミニアルバムをゲームに先行して、リリースすることが決まったよ！<br>
+the latest Sonic Team title, ahead of the game!<br>
 
-リアルな新しいソニックの世界に相応しい曲が勢揃いしているよ。<p>
-
-
-
-ゲームの発売までもう少しだけど、これを聴いて楽しみに待っていてね！<br>
+It's a great collection of songs for the new, realistic Sonic world.<p>
 
 
 
-今回も...!?マジで<b>売り切れ必至！</b>
+We're almost to the game's release, but listen to this and stay tuned!<br>
+
+
+
+Again, we <b>must sell out!</b>
 
 
 
@@ -92,7 +92,7 @@ SONIC Adventure Vocal mini-Album<br>
 
 <font size=4 color="white"><b>
 
-- 収録曲 -
+- Songs -
 
 </b></font>
 
@@ -106,9 +106,9 @@ SONIC Adventure Vocal mini-Album<br>
 
 <tr><td>
 
- TNTのヴォーカリストTony Harnellが歌うソニックのテーマは、彼の生き様（アティテュード）を歌った曲だよ！
+ TNT vocalist Tony Harnell's Sonic theme is a song about his attitude!
 
-「ポジティブ」と「スピード感」がキーワードです。
+The key words are positive and speedy.
 
 </td></tr>
 
@@ -120,9 +120,9 @@ SONIC Adventure Vocal mini-Album<br>
 
 <tr><td>
 
-元気のいいアグレッシブな曲を聞きたい人へ。<br>
+For those who want to listen to energetic and aggressive songs.<br>
 
-CUTEな女の子ヴォーカルでFUNNY GIRL"AMY"を楽しんでくださいね。
+Please enjoy funny girl Amy with her cute girl vocals.
 
 
 
@@ -134,9 +134,9 @@ CUTEな女の子ヴォーカルでFUNNY GIRL"AMY"を楽しんでくださいね。
 
 <tr><td>
 
-この曲は、TGS'98秋のライブでもやったね。目を閉じて曲を聴けば、そこはお気楽極楽ビッグとカエルくんのパラダイス。
+I played this song at the TGS '98 fall concert. If you close your eyes and listen to the song, you will find yourself in the paradise of Big and Froggy.
 
-歌っているのは元DANGER DANGERのヴォーカリストTed Poleyだよ。
+It's sung by Ted Poley, the former vocalist of Danger Danger.
 
 </td></tr>
 
@@ -148,9 +148,9 @@ CUTEな女の子ヴォーカルでFUNNY GIRL"AMY"を楽しんでくださいね。
 
 <tr><td>
 
-今回のテイルスは、ソニックの後ろを付いて歩くだけじゃない「自立」がキーワード。
+The key word for Tails is independence, not just following behind Sonic.
 
-そんな彼へのメッセージソングです。
+This is a message song for him.
 
 </td></tr>
 
@@ -162,9 +162,9 @@ CUTEな女の子ヴォーカルでFUNNY GIRL"AMY"を楽しんでくださいね。
 
 <tr><td>
 
-ソニックとは認め合いながらもライバル視？ナックルズってばそんなヤツ。
+He and Sonic acknowledge eachother, but see eachother as rivals? Knuckles is that kind of guy.
 
-違う意味でクールだけど内面はアツい、そんな彼にピッタリなテーマだよ。
+He's cool in a different way, but hot on the inside, and this is the perfect theme for him.
 
 </td></tr>
 
@@ -176,15 +176,15 @@ CUTEな女の子ヴォーカルでFUNNY GIRL"AMY"を楽しんでくださいね。
 
 <tr><td>
 
-今回のメインテーマはこの曲！アニメタルの坂本英三に歌ってもらった発表会ヴァージョンとか、
+The main theme of this year's event was this song! There have been many versions,
 
-BOWWOWの堀江くんに歌ってもらったライブとか色々あったけど、この完成ヴァージョンの歌を歌って
+such as the presentation version sung by Eizo Sakamoto of Animetal, and the live version sun by Horie of Bow Wow,
 
-いるのは元HARDLINEのヴォーカリストJohnny Gioeliだよ。<br>
+but this finished version is sung by Johnny Gioeli, the former vocalist of Hardline.<br>
 
-もうCFとか"Power Play"とかでお馴染みかな？
+You may already be familiar with CF or Power Play?
 
-ソニックとカオス、そしてエッグマンの関係を綴ったこの曲の歌詞はこちら。
+Here are the lyrics to this song about the relationship between Sonic, Chaos, and Eggman.
 
 </td></tr>
 
