--- a/japan/sonicadv/info/foruma.html
+++ b/japan/sonicadv/info/foruma.html
@@ -20,7 +20,7 @@
 
 
 
-	国際フォーラム　Ａホール
+	International Forum, Hall A
 
 
 
@@ -46,9 +46,9 @@
 
 
 
-　発表会本番を前にして、ちょっと下見をしてきたよ。<br>
+　We've been doing a little preview before the actual presentation.<br>
 
-ＪＲ有楽町駅から歩いてすぐの、すごくきれいでかっこいい建物なのだ。
+It's a very beautiful and cool building just a short walk from JR Yurakucho Station.
 
 
 
@@ -92,13 +92,13 @@
 
 <font size=3>
 
-エントランスから外を見たところ。<br>
+Looking out from the entrance.<br>
 
 </td>
 
 <td width="320" height="32" valign="top">
 
-階段。これを登っていよいよ会場へ。
+Stairs. Climbing up the stairs, we finally reach the venue.
 
 </td>
 
@@ -140,15 +140,15 @@
 
 <td width="320" height="32" valign="top">
 
-これがＡホール内部だ！<br>
+This is the inside of Hall A!<br>
 
-ソニック最新作はここでデビュー。
+Sonic's latest work debuts here.
 
 </td>
 
 <td width="320" height="32" valign="top">
 
-横を向くと、こんな感じ。
+Looking to the side, it looks like this.
 
 </td>
 
@@ -186,13 +186,13 @@
 
 <td width="320" valign="top">
 
-２階席からのながめはこんな感じ。
+The view from the second floor is like this.
 
 </td>
 
 <td width="320" valign="top">
 
-舞台の下見中。
+Previewing the stage.
 
 </td>
 
