--- a/japan/sonicadv/info/happyoukai.html
+++ b/japan/sonicadv/info/happyoukai.html
@@ -4,7 +4,7 @@
 
 <title>
 
-発表! ソニック制作発表会!!
+Announcement! Sonic Production Announcement!
 
 </title>
 
@@ -24,7 +24,7 @@
 
 <font face="ＤＦPOP体" size=5 color="white"><b>
 
-発表! ソニック制作発表会!!</b></font>
+Announcement! Sonic Production Announcement!</b></font>
 
 </td></tr>
 
@@ -38,13 +38,13 @@
 
 <td bgcolor="white">
 
-イベント名：
+Event Name:
 
 </td><td bgcolor="white">
 
 <b>
 
-	「ＳＯＮＩＣ Ａｄｖｅｎｔｕｒｅ 制作発表会」
+	Sonic Adventure Production Presentation
 
 </b>
 
@@ -52,23 +52,23 @@
 
 <tr><td valign="top" bgcolor="white">
 
-日時：
+Time:
 
 </td><td bgcolor="white">
 
-	１９９８年８月２２日(土)<br>
+	August 22nd, 1998<br>
 
-        第１回  １０：００開場／１１：００開演<br>
+        First Presentation: 10:00 to 11:00<br>
 
-        第２回  １３：３０開場／１４：３０開演<br>
+        Second Presentation: 13:30 to 14:30<br>
 
-        ※イベント内容は２回ともまったく同一のものです。
+        The content of both presentations is exactly the same.
 
 </td></tr>
 
 <tr><td bgcolor="white">
 
-場所：
+Location:
 
 </td><td bgcolor="white">
 
@@ -76,7 +76,7 @@
 
 <a href="foruma.html">
 
-東京国際フォーラム ホールＡ(有楽町)</a>
+Tokyo International Forum, Hall A (Yurakucho)</a>
 
 </b>
 
@@ -84,15 +84,15 @@
 
 <tr><td colspan=2 bgcolor="white">
 
-入場無料(チケット不要)。
+Free admission (no ticket required).
 
-ただし、ご来場順の入場につき、満員の際や開演後の入場に関しては、
+Please note, however, that admission is on a first-come, first-served basis, and we reserve the right
 
-お断りすることがありますので、ご了承ください。
+to refuse admission when the venue is full or after the show has started.
 
 <p>
 
-入場者には、もれなくここでしか手に入らないお土産も用意しております。
+There will also be a special souvenir for those who enter.
 
 </td></tr>
 
@@ -114,7 +114,7 @@
 
 <font face="ＤＦPOP体" size=4 color="white"><b>
 
-コメント
+Comment:
 
 </b></td></tr>
 
@@ -136,19 +136,19 @@
 
 <b>
 
-<b>中</b>　裕司<br>
+<b>Yuji</b>　Naka<br>
 
 </b>
 
-ソニックチーム プロデューサー
+Producer, Sonic Team
 
 </td></tr>
 
 <tr><td valign="bottom">
 
-  「ソニック＆ナックルズ」から早４年。ソニックチームが贈るＤｒｅａｍｃａｓｔ第１弾ソフトとして、ソニックの最新作を発表することになりました。今回は、初めてのお披露目の場所に、いつも一番応援してくれるユーザーのみなさんをご招待したいと思っています。<br>
+  It's been four years since Sonic & Knuckles. As the first software title on the Dreamcast, we are pleased to announce the latest Sonic game. This time, we would like to invite all the people who have always supported us the most since our first unveiling.<br>
 
-この発表の場に、ぜひ、みなさんも立ち会ってください。
+I hope you will be able to be there to witness this presentation.
 
 <p>
 
@@ -170,11 +170,11 @@
 
 <b>
 
-<b>竹</b>崎さん<br>
+Mr. <b>Takezaki</b><br>
 
 </b>
 
-ＣＳプロモーション部
+CS Promotion Department
 
 </td></tr>
 
@@ -182,9 +182,9 @@
 
 <p>
 
-  ハードを発表するのはいいけどソフトがなけりゃただの箱でしょ。セガのソフトはどーなってんの？な～んて、みなさんのご指摘を受けながらも今日まで沈黙を守ってきたのは、万を持して、みんなと一緒にこの発表会をやりたかったからなのだ。<br>
+  It's great to announce hardware, but without software, it's just a box. What about Sega's software? The reason why I've kept my mouth shut until today, despite everyone's suggestions, is because I wanted to share this presentation with everyone.<br>
 
-僕は見たけど、ひとこと「凄い！」。キミも発表会に参加して歴史の証人になるのだ!!
+I've seen it and all I can say is, "Great! I saw it." You too can participate in the presentation and be a witness to history!
 
 
 
@@ -204,7 +204,7 @@
 
 <font face="ＤＦPOP体" size=4 color="white"><b>
 
-ちょっと対談
+A Little Conversation
 
 </b></td>
 
@@ -218,7 +218,7 @@
 
 <font size=3>
 
-「ソニックアドベンチャー制作発表会」開催にあたって
+On the occasion of the Sonic Adventure Production Presentation
 
 <p>
 
@@ -230,19 +230,19 @@
 
 <font size=3>
 
-<b><b>竹</b></b>＞	いよいよソニックチームのドリームキャスト第１弾ソフトを発表することになりましたね。
+<b><b>Takezaki</b></b>: It's finally time to announce the first Dreamcast software from Sonic Team.
 
-本家ソニックチームが制作するソニックの新作は９４年に発売されたメガドライブの「ソニック
+It's been four years since the last new Sonic game created by the original Sonic Team, Sonic and Knuckles
 
-＆ナックルズ」から４年ぶりになりますね、中さん。<br>
+for the Mega Drive, which was released in 1994, wasn't it, Mr. Naka?<br>
 
-<b>中</b>＞	ええ。ユーザーのみなさんからソニックの新作を作って欲しいという声をたくさんいただいて
+<b>Naka</b>: Yes. We've been getting a lot of requests from our fans for a new Sonic game.
 
-いましたが、ようやくその声におこたえできる時がやってきました。<br>
+The time has finally come for us to respond to their requests.<br>
 
-<b>竹</b>＞	ソニックチームは今年の２月に「バーニングレンジャー」を発売したばかりだと思うのですが、
+<b>Takezaki</b>: I believe Sonic Team just released Burning Rangers in February of this year.
 
-「ソニックアドベンチャー」の開発はいつから始まっていたのですか？
+When did you start development on Sonic Adventure?
 
 </td>
 
@@ -260,15 +260,15 @@
 
 <td valign="top">
 
-<b>中</b>＞	実は今回の新作に関しては、サターンの「ナイツ」の開発終了直後から構想を始めていたん
+<b>Naka</b>: In fact, we started thinking about this new title right after the development of NiGHTS
 
-です。<br>そして、せっかくソニックをやるんだったらあんなこともこんなこともやりたいという様々
+for the Saturn ended.<br>As we incorporated various ideas that we wanted to do such and such a thing if
 
-なアイデアを盛り込んでいくうちに、だんだんとスケールの大きい作品になっていき、そのア
+we were going to do a Sonic game, it gradually became a large scale work.
 
-イデアをそのまま実現するために、ドリームキャストで開発することになりました。<p>
+In order to realize these ideas, we decided to develop the game on the Dreamcast.<p>
 
-<b>竹</b>＞	ずばり、今度のソニックはどんなゲームになるのでしょう？<p>
+<b>Takezaki</b>: What kind of game will the next Sonic be?<p>
 
 
 
@@ -282,19 +282,19 @@
 
 <td valign="top" colspan=2>
 
-<b>中</b>＞	今度のソニックは、今までにない「ゲームの未来基準」をお見せできるような、僕としても自
+<b>Naka</b>: I'm confident that the new Sonic will be able to show the future standard of gaming that has never been seen before.
 
-信たっぷりの仕上がりになりそうです。ただ、せっかく発表会をやりますので、今日のところ
+However, since we're having a presentation, I can't tell you any more about it today.
 
-はこれ以上お話できないんですけど（笑）。あまり内容を話してしまうと、８月22日の発表会
+I can't tell you much more today (laughs). (laughs) If I talk too much about the contents,
 
-の意味がなくなっちゃいますからね。<p>
+the presentation on August 22 will be meaningless.<p>
 
 
 
-<b>竹</b>＞	それはそうですよね（笑）。<br>
+<b>Takezaki</b>: That's true. (laughs)<br>
 
-	では、その発表会について教えていただけますか？<p>
+	So, can you tell us about the presentation?<p>
 
 </td></tr>
 
@@ -308,17 +308,17 @@
 
 <tr><td valign="top">
 
-<b>中</b>＞	はい。発表会は８月22日の土曜日に、有楽町の東京国際フォーラムＡホールで行います。
+<b>Naka</b>: Yes. The presentation will be held on Saturday, August 22nd, at Tokyo International orum Hall A in Yurakucho.
 
-せっかくソニックを発表する機会をいただけたので、いつも一番熱心に応援してくれるユー
+Since we have been given the opportunity to present Sonic, we wanted to make sure that the fans who are always the most enthusiastic supporters
 
-ザーのみなさんにその場に立ち会っていただきたいと思い、プレスや関係者以外の方でも
+would be there. We've decided to make the event open to everyone, even those who are not members of the press
 
-参加できる発表会にしました。<br>
+or related parties.<br>
 
-２回の公演を予定しているんですが、１回目はユーザーのみなさんだけに入っていただいて、
+We're planning to have two showsm but we're thinking of having only the fans participate the first one,
 
-関係者は２回目に入ってもらおうか、なんていうことも考えています。
+and the people involved in the second one.
 
 </td>
 
@@ -340,25 +340,25 @@
 
 <td valign="top" colspan=2>
 
-それと、セガ・パートナ
+And Sega partners.
 
-ーズの方には優先的に入場していただけるシステムなどもとれればいいなぁとスタッフと一
+The staff and I are hoping to have a system that will give priority
 
-緒に考えています。<p>
+to those who are interested in the event.<p>
 
-<b>竹</b>＞	東京国際フォーラムといえば、駅のそばで交通にとても便利ですよね。東京駅から１駅目の
+<b>Takezaki</b>: Speaking of the Tokyo International Forum, it is very convenient for transportation near the station.
 
-有楽町駅のそばということもあって、夏休みを利用して東京に来ていただいた方にも分かり
+It's just one stop away from Tokyo Station over at Yurakucho Station, so it is easy to find for those who
 
-やすいですしね。<p>
+come to Tokyo during their summer vacation.<p>
 
-<b>中</b>＞	ええ。８月22日という日程も、夏休み中の土曜日という観点から決定しました。
+<b>Naka</b>: Yes, the date of August 22 was also decided in view of the fact that it was a Saturday during the summer vacation.
 
-少しでも完成形に近いものを見ていただくには、少しでも後の方がいいのですが、その次の
+It would have been better if it was a little later so that people could have a close look at the finished product,
 
-週末になると、夏休み最後の土日になってしまって、皆さん宿題の最後の追い込みで忙しい
+but the following weekend would be the last week of the summer vacation, and everyone would have been busy
 
-ですからね、きっと（笑）。
+catching up on their homework.
 
 </td>
 
@@ -376,15 +376,15 @@
 
 <font size=2>
 
-ほっ、本部に連絡だっ！
+Ho, call headquarters!
 
 </font>
 
 </td><td>
 
-<b>竹</b>＞	発表会は、いったいどんな内容になるのですか？<p>
+<b>Takezaki</b>: 発表会は、いったいどんな内容になるのですか？<p>
 
-<b>中</b>＞	内容は、せっかく来ていただいた方の期待を裏切らないように、なるべく良いものにしようと
+<b>Naka</b>: 内容は、せっかく来ていただいた方の期待を裏切らないように、なるべく良いものにしようと
 
 今も多くのスタッフと一緒に話し合いをおこなっている最中です。
 
@@ -392,7 +392,7 @@
 
 期待していて下さい。<p>
 
-<b>竹</b>＞	当日は混雑が予想されると思うのですが、チケット予約などはしなくても大丈夫なのです
+<b>Takezaki</b>: 当日は混雑が予想されると思うのですが、チケット予約などはしなくても大丈夫なのです
 
 か？
 
@@ -406,7 +406,7 @@
 
 <tr><td>
 
-<b>中</b>＞	誰でも気軽に遊びに来ていただけるために、先行予約などは行っていません。東京国際フ
+<b>Naka</b>: 誰でも気軽に遊びに来ていただけるために、先行予約などは行っていません。東京国際フ
 
 ォーラムは一度に５千人入る会場なので、２回で１万人ですよね。僕は、そんなに人が来て
 
@@ -424,13 +424,13 @@
 
 
 
-<b>竹</b>＞	今から８月２２日が楽しみですよね。<br>
+<b>Takezaki</b>: 今から８月２２日が楽しみですよね。<br>
 
 中さんはきっとステージにあがるし、僕もロビーをうろうろしていることでしょう（笑）。
 
 では最後に、ユーザーの皆さんに一言お願いします。<p>
 
-<b>中</b>＞	小さなお子さんから、今までソニックを応援してきてくれたユーザーの皆さんまで、きっと満
+<b>Naka</b>: 小さなお子さんから、今までソニックを応援してきてくれたユーザーの皆さんまで、きっと満
 
 足していただける発表会になると思います。<br>ドリームキャストによって生まれ変わる新生ソニ
 
