--- a/japan/sonicadv/info/cd_teambest2.html
+++ b/japan/sonicadv/info/cd_teambest2.html
@@ -2,7 +2,7 @@
 
 <head>
 
-<title>[MusicCD] SONICTEAM "PowerPlay" １１/６発売！</title>
+<title>[MusicCD] SONICTEAM "PowerPlay" November 6 release!</title>
 
 </head>
 
@@ -16,9 +16,9 @@
 
 <font size=4 color="white"><b>
 
-ソニックチームのベストアルバム<br>
+Sonic Team's Best Album<br>
 
-[SONICTEAM "PowerPlay"]まもなく発売！
+[SONICTEAM "PowerPlay"] coming soon!
 
 </b></font>
 
@@ -28,17 +28,17 @@
 
 <tr><td bgcolor="#eeeeee">
 
-ソニックチーム作品のボーカル曲を集めたベストアルバムの発売日まで、あと一週間をきったよ！！<br>
+There's only one week left until the release date of the best album of vocal songs from Sonic Team's works!<br>
 
-あの懐かしい「ソニックＣＤ」から今年発売した「バーニングレンジャー」まで、ソニックチーム作品のボーカル曲を収録！<br>
+From that nostalgic Sonic CD to this year's Burning Rangers, vocal songs from Sonic Team titles are included!<br>
 
-そして、噂のシークレットトラックで未来を聞こう！！
+And let's hear about the future in the rumored secret track!
 
 <p>
 
 <center>
 
-<a href="cd_teambest.html"><font size=4><b>告知ページへ</b></font></a>
+<a href="cd_teambest.html"><font size=4><b>Go to the announcement page.</b></font></a>
 
 <hr>
 
@@ -48,7 +48,7 @@
 
 <tr><td bgcolor="#eeeeee">
 
-アルバムを聞いた大島さんが思わず出した、サウンドチーム幡谷さん宛のメールを大公開！<p>
+After listening to the album, Mr. Oshima couldn't help but send out an email to the sound team, Mr. Hataya.<p>
 
 <center>
 
@@ -58,31 +58,31 @@
 
 <pre>
 
-差出人: Oshima,Naoto
+From: Naoto Oshima
 
-宛先: Hataya,Naofumi
+Address: Tokyo, Japan
 
-日付: 1998年10月28日 21:54
-
-
-
-メールを出すなんて久しぶりですね。
+Date: October 28th, 1998, 21:54
 
 
 
-ソニックチーム パワープレイを懐かしい気持ちで聴いていました。
-
-Sweet Mix in Holy Nightを聴いて感動してメールを書く事にしました。
+It's been a long time since I sent out an email.
 
 
 
-最高です！！幡谷ワールド、心にしみるリミックスです。
+I was listening to Sonic Team PowerPlay with nostalgia.
 
-でいて、かっこいいス！！
+I listened to Sweet Mix in Holy Night and was so impressed that I decided to write an email.
 
 
 
-またいつか 一緒に仕事ができますように！！心にしみるＰＪの時に。
+It's great! Hattaya World, a remix that sticks in your mind.
+
+And it's so cool!
+
+
+
+May we work together again someday! During the heart-wrenching PJ.
 
 </pre>
 
@@ -96,7 +96,7 @@ Sweet Mix in Holy Nightを聴いて感動してメールを書く事にしました。
 
 
 
-もう、買うっきゃない！予約してないヒトはお店にＧＯ！
+Now you have to buy it! If you haven't pre-ordered, go to the store!
 
 <hr>
 
