--- a/japan/sonicadv/info/happyoukai.html
+++ b/japan/sonicadv/info/happyoukai.html
@@ -382,19 +382,19 @@ Ho, call headquarters!
 
 </td><td>
 
-<b>Takezaki</b>: 発表会は、いったいどんな内容になるのですか？<p>
+<b>Takezaki</b>: What will the presentation be like?<p>
 
-<b>Naka</b>: 内容は、せっかく来ていただいた方の期待を裏切らないように、なるべく良いものにしようと
+<b>Naka</b>: We are in the process of discussing the content with many staff members to make it as good as possible
 
-今も多くのスタッフと一緒に話し合いをおこなっている最中です。
+so as not to betray the expectations of those who have come.
 
-また、来ていただいた方への記念になるおみやげも現在、いろいろ検討中です。
+We are also currently considering a variety of souvenirs to give to visitors as a memento of their visit.
 
-期待していて下さい。<p>
+Stay tuned.<p>
 
-<b>Takezaki</b>: 当日は混雑が予想されると思うのですが、チケット予約などはしなくても大丈夫なのです
+<b>Takezaki</b>: I think it will be crowded on the day of the vent, but do I
 
-か？
+need to make a reservation for the tickets?
 
 </td></tr>
 
@@ -406,41 +406,41 @@ Ho, call headquarters!
 
 <tr><td>
 
-<b>Naka</b>: 誰でも気軽に遊びに来ていただけるために、先行予約などは行っていません。東京国際フ
+<b>Naka</b>: In order to make it easy for anyone to come and visit us, we do not take advance reservations.
 
-ォーラムは一度に５千人入る会場なので、２回で１万人ですよね。僕は、そんなに人が来て
+The Tokyo International Forum is a venue that can hold 5,000 people at a time,
 
-くれるのかなぁ…なんて心配しているのですが（笑）。<br>
+so 10,000 people can come in total, right? I wonder if that many people will come... (laughs)<br>
 
-でももし万が一、１回目が満席になってしまったら、その後に並んでいる方には、２回目のチ
+But if by any chance the first session is full, we will give the
 
-ケットをお渡しすることになると思います。
+second ticket to the person in line after that.
 
-入場無料の自由来場型イベントなので、実際のところ何人の人に来ていただけるのか分か
+This is a free-to-attend event, so we don't know how many people will actually show up.
 
-らないのですが、せっかく来ていただいた方々には、できるかぎり親切な対応をとれるよう、
+However, I will do my best to be as kind as possible to those who do come.
 
-これから８月２２日までは精一杯の準備をしていきたいと思っています。<p>
-
-
-
-<b>Takezaki</b>: 今から８月２２日が楽しみですよね。<br>
-
-中さんはきっとステージにあがるし、僕もロビーをうろうろしていることでしょう（笑）。
-
-では最後に、ユーザーの皆さんに一言お願いします。<p>
-
-<b>Naka</b>: 小さなお子さんから、今までソニックを応援してきてくれたユーザーの皆さんまで、きっと満
-
-足していただける発表会になると思います。<br>ドリームキャストによって生まれ変わる新生ソニ
-
-ックを、期待して待っていて下さい。
-
-８月２２日、東京国際フォーラムでお会いしましょう。<p>
+I will also do my best to prepare for the event on August 22.<p>
 
 
 
-...ステージにあがるのは嫌だなぁ（笑）。
+<b>Takezaki</b>: You're looking forward to August 22nd now, aren't you?<br>
+
+I'm sure Mr. Naka will be on stage and I'll be hanging around the lobby. (laughs)
+
+Lastly, please give a message to the people.<p>
+
+<b>Naka</b>: I am sure that everyone from small children to the fans who have
+
+supported Sonic up to now will be satisfied with the presentation.<br>We hope you look forward to seeing the new Sonic
+
+rebirth on the Dreamcast.
+
+See you at the Tokyo International Forum on August 22.<p>
+
+
+
+...I don't want to get up on stage. (laughs)
 
 
 
@@ -456,11 +456,11 @@ Ho, call headquarters!
 
 <hr><br>
 
-さあ、この先の情報は今週、来週のゲーム専門誌をチェック！<br>
+Now, check out this week's and next week's gaming magazines for the rest of the information!<br>
 
-７月２６日のファミ通のイベント「ゲームサーカス５００ ｉｎ　Ａｋｉｈａｂａｒａ」
+Mr. Naka will also appear at the Famitsu Game Circus 500 in Akihabara on July 26th!
 
-にも中さんが登場！さらに深い情報が聞けるかも！
+You might be able to get some more in-depth information!
 
 <tr><td bgcolor="black" width="640" height="24" colspan=2 align="center">
 
