--- a/japan/sonicadv/info/happyoukai_add0.html
+++ b/japan/sonicadv/info/happyoukai_add0.html
@@ -16,7 +16,7 @@
 
 <font  face="ＤＦＰPOP体" color="white" size=5><b>
 
-発表会の追加情報だよ！
+It's an addition to the presentation!
 
 </b></font>
 
@@ -26,7 +26,7 @@
 
 <font size=4 color="black"><b>
 
-「発表会に来てくれたみんなに、もれなく３つのプレゼント！」
+Everyone who comes to the presentation gets three free gifts!
 
 </b></font>
 
@@ -34,35 +34,35 @@
 
 <tr><td bgcolor="#eeeeee" align="center">
 
-当日来てくれたひとにはこれあげる！
+We'll give this to anyone who shows up!
 
 </td></tr>
 
 <tr><td>
 
-<b>非売品Ｔシャツ</b>：<br>
+<b>Not for sale T-shirts</b>:<br>
 
-オリジナルデザインだよ。
-
-</td></tr>
-
-<tr><td>
-
-<b>画き下ろしポストカード</b>：<br>
-
-各キャラクター分、入ってるよ。
+It's an original design.
 
 </td></tr>
 
 <tr><td>
 
-<b>プレスシート</b>：<br>
+<b>Newly drawn postcard</b>:<br>
 
-各種発表会で、マスコミ向けの資料として配られるのが”プレスシート”だ。<br>
+There's one for each character.
 
-今回の「制作発表会」に来てくれたキミにも、もちろん配布！<br>
+</td></tr>
 
-（Ｂ４二ツ折）
+<tr><td>
+
+<b>Press sheet</b>:<br>
+
+Press sheets are handed out to the mass media at various presentations.<br>
+
+Of course, it will be distributed to those who came to the production presentation!<br>
+
+(B4, folded)
 
 
 
@@ -72,7 +72,7 @@
 
 <font size=4><b>
 
-「レアグッズを用意したよ。発表会場で独占販売！」
+We've prepared some rare goods. Sold exclusively at the presentation venue!
 
 </b></font>
 
@@ -80,61 +80,61 @@
 
 <tr><td bgcolor="#eeeeee" align="center">
 
-今回キャラクターデザインをリニューアルしたので、新たにグッズを作ったよ。<br>
+We've renewed the character design this time, so we made some new goods.<br>
 
-当日、お金に余裕があれば買ってみてね。
-
-</td></tr>
-
-<tr><td>
-
-<b>Ｔシャツ</b>：<br>
-
-もちろん来場者プレゼントのTシャツとは違うバージョン。<br>
-
-今年の夏は、ソニックのＴシャツを着て街に出かけてくれると嬉しいな！
+If you have enough money on the day, try to buy one.
 
 </td></tr>
 
 <tr><td>
 
-<b>クリアファイル</b>：<br>
+<b>T-shirt</b>:<br>
 
-二種類のデザインを用意したよ。<br>
+Of course, this is a different version of the T-shirt that was given as a gift to visitors.<br>
 
-このファイルを使えば、成績もグングン伸びるぞ(!?)
-
-</td></tr>
-
-<tr><td>
-
-<b>ピンズセット</b>：<br>
-
-リニューアルデザインされ今回登場するキャラクターたちのピンズ。<br>
-
-一体ずつきれいにカラーリングしたよ。
+I hope you're wearing your Sonic t-shirt out in the town this summer!
 
 </td></tr>
 
 <tr><td>
 
-<b>Ｂ２サイズポスター</b>：<br>
+<b>Clear file</b>:<br>
 
-新デザインのソニックをあしらった、大きなブルーのポスター。<br>
+We've prepared two different designs.<br>
 
-みんなのお部屋に飾ってね！
+If you use this file, your grades will improve rapidly(!).
 
 </td></tr>
 
 <tr><td>
 
-<b>パンフレット</b>：<br>
+<b>Pins set</b>:<br>
 
-ゲーム本編はもちろん、南米への取材旅行から開発秘話まで載った、<br>
+Pins of the newly redesigned characters.<br>
 
-「ソニックアドベンチャー」の全てがわかるパンフレット。<br>
+We colored each of them beautifully.
 
-フルカラーの豪華版！
+</td></tr>
+
+<tr><td>
+
+<b>B2 size poster</b>:<br>
+
+A large blue posted with the new Sonic design on it.<br>
+
+Put it up in everyone's room!
+
+</td></tr>
+
+<tr><td>
+
+<b>Brochure</b>:<br>
+
+This brochure covers not only the game, but also everything about<br>
+
+the research trip to South America to development secrets.<br>
+
+Full color, gorgeous!
 
 </td></tr>
 
@@ -144,49 +144,49 @@
 
 <font size=4><b>
 
-次は、気になる発表会の内容をチョコっと紹介・・・
+Next, I'd like to introduce you to some of the details of the presentation.
 
 </b></font></td></tr>
 
 <tr><td>
 
-プロデューサー中の紹介による、ドリームキャストの実機を使用した<br>
+Producer Naka introduced the demo play of<br>
 
-<b>「ソニック アドベンチャー」のデモプレイ</b>。<br>
+<b>Sonic Adventure by using an actual Dreamcast machine</b>.<br>
 
-舞台上の大スクリーンで世界初公開！
-
-</td></tr>
-
-<tr><td>
-
-<b>「ソニック アドベンチャー」ライブ</b>：<br>
-
-セガのサウンドチームによる、「ソニック アドベンチャー」メインテーマ曲ライブ。<br>
-
-なんと、このライブのために特注した、ソニックが描かれたギターを使用！
+World premiere on the big screen on stage!
 
 </td></tr>
 
 <tr><td>
 
-<b>「ソニック コール」</b>：<br>
+<b>Sonic Adventure Live</b>:<br>
+
+Live performance of Sonic Adventure main theme song by Sega's sound team.<br>
+
+What a surprise, they used a guitar with Sonic's picture on it, custom-made for this concert!
+
+</td></tr>
+
+<tr><td>
+
+<b>Sonic Call</b>:<br>
 
 
 
-「キミの声がゲームになるかもしれない・・・」<p>
+Your voice could be in the game...<p>
 
 
 
-このイベントは、あの「せがた三四郎」こと藤岡 弘 氏が登場。<br>
+This event featured Hiroshi Fujioka, aka Sanshiro Segata.<br>
 
-藤岡氏の指揮により、会場に着てくれたみんなの声を生収録するんだ。<p>
+Under the direction of Mr. Fujioka, the voices of everyone who came to the event were recorded live.<p>
 
 
 
-ゲームの中でどう使うのかは、まだ秘密。<br>
+How it will be used in the game is still a secret.<br>
 
-みんなの大きな声で協力してね！
+We need everyone's loud voices to help us!
 
 
 
@@ -194,9 +194,9 @@
 
 <tr><td bgcolor="#eeeeee">
 
-その他、まだまだヒミツの企画が盛りだくさん。<br>
+In addition, there are many more secret projects.<br>
 
-ゼッタイに面白い発表会にするから、みんなゼッタイ来てね！
+It's going to be a really interesting presentation, so please come!
 
 </td></tr>
 
